<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_margin"
    tools:context=".PlusActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            style="@style/TextA"
            android:textStyle="bold"
            android:text="@string/name" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_paddingleft"
            android:paddingStart="@dimen/activity_paddingleft"
            android:paddingRight="@dimen/activity_paddingleft">

            <EditText
                android:id="@+id/edit_book_name"
                style="@style/TextB"
                android:hint="@string/hint_name"
                android:inputType="textCapWords" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingLeft="@dimen/activity_paddingleft"
                android:paddingStart="@dimen/activity_paddingleft"
                android:paddingRight="@dimen/activity_paddingleft"
                tools:ignore="NestedWeights">

                <EditText
                    android:id="@+id/edit_book_price"
                    style="@style/TextB"
                    android:hint="@string/hint_book_price"
                    android:inputType="number"
                    android:maxLength="5" />

                <TextView
                    android:id="@+id/currency_units"
                    style="@style/TextC"
                    android:text="@string/currency" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            style="@style/TextA"
            android:textStyle="bold"
            android:text="@string/quantity_name" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/decrement_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/by_0"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/increment_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/plus" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            style="@style/TextA"
            android:text="@string/supplier_address" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="14dp">

            <EditText
                android:id="@+id/edit_supplier_address"
                style="@style/TextB"
                android:hint="@string/supplier_address"
                android:inputType="textCapWords" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextA"
            android:text="@string/supplier_details" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_paddingleft"
            android:paddingStart="@dimen/activity_paddingleft"
            android:paddingRight="@dimen/activity_paddingleft">

            <EditText
                android:id="@+id/edit_supplier_name"
                style="@style/TextB"
                android:hint="@string/hint_name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_supplier_phonenumber"
                style="@style/TextB"
                android:hint="@string/hint_supplierphonenumber"
                android:inputType="phone" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>